src/test/ui/type-alias-impl-trait/generic_nondefining_use.stderr
error: at least one trait must be specified
  --> $DIR/generic_nondefining_use.rs:5:15
   |
LL | type Cmp<T> = impl 'static;
   |               ^^^^^^^^^^^^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_nondefining_use.rs:10:13
   |
LL | fn cmp() -> Cmp<u32> {
   |             ^^^^^^^^
   |
note: used non-generic type `u32` for generic parameter
  --> $DIR/generic_nondefining_use.rs:5:10
   |
LL | type Cmp<T> = impl 'static;
   |          ^

error: aborting due to 2 previous errors

